--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   dio: ^5.4.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
+  intl: ^0.18.1
+  uuid: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
