--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   json_annotation: ^4.8.1
   intl: ^0.18.1
   uuid: ^4.0.0
+  image_picker: ^1.1.2
+  cached_network_image: ^3.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
