--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   pinput: ^3.0.1
   email_validator: ^2.1.17
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
