--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   pinput: ^3.0.1
   email_validator: ^2.1.17
   salomon_bottom_bar: ^3.3.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
