--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,34 +6,36 @@ plugins {
 }
 
 android {
+    // Set your app’s package namespace
     namespace = "com.example.pfe1"
-    compileSdk = flutter.compileSdkVersion
+    
+    // Set compileSdk to 34 so that dependencies requiring SDK 34 are satisfied
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
+    // Use Java 17 for both source and target compatibility
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
+    // Ensure Kotlin compiles with Java 17 compatibility
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "17"
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.pfe1"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 21
+        targetSdk = 34
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // For now, using the debug signing configuration. 
+            // For production, you’ll need a proper release signingConfig.
             signingConfig = signingConfigs.debug
         }
     }
