--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.2.3
   json_serializable: ^6.6.0
   emoji_picker_flutter: ^1.6.0
+  flutter_local_notifications: ^18.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
