--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   json_serializable: ^6.6.0
   emoji_picker_flutter: ^1.6.0
   flutter_local_notifications: ^18.0.1
+  path: ^1.8.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
