--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   emoji_picker_flutter: ^1.6.0
   flutter_local_notifications: ^18.0.1
   path: ^1.8.3
+  geolocator: ^9.0.2
+  permission_handler: ^10.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
