--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   path: ^1.8.3
   geolocator: ^9.0.2
   permission_handler: ^10.2.0
-
+  map_launcher: ^3.5.0  # Add this package
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -60,7 +60,13 @@ dependencies:
   email_validator: ^2.1.17
   salomon_bottom_bar: ^3.3.2
   shared_preferences: ^2.2.2
+  flutter_map: ^8.1.0 # Open-source Flutter map based on Leaflet
+  latlong2: ^0.9.1 
+   # For handling latitude and longitude
+  flutter_polyline_points: ^2.1.0
 
+  url_launcher: ^6.1.14 
+  http: ^1.1.0 # For API requests
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -113,3 +119,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+# For launching URLs (optional)
