--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_generative_ai: ^0.4.6
+  animated_text_kit: ^4.2.3
+  lottie: ^3.3.1
+
+
   pinput: ^3.0.1
   email_validator: ^2.1.17
   salomon_bottom_bar: ^3.3.2
